# gifenc-native

./: .all-contributorsrc  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  LICENSE.md  README.md  package.json
.github/: CODEOWNERS
src/: gif_encoder.rs  lib.rs  lzw_encoder.rs  neuquant.rs
