[package]
edition = "2021"
name = "gifenc-native"
version = "0.1.0"
authors = ["Skyra Project", "Tyler J. Russell <t@k-cs.co>"]
description = "A very fast native server-side animated GIF generation for Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.0"
bytes = "1.1.0"
derivative = "2.2.0"
gif = "0.11.3"
napi = { version = "2.1.0", default-features = false, features = ["napi8"] }
napi-derive = "2.0.7"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
